fixed change detections and dynamic input

--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
@@ -5,8 +5,8 @@
       id="DIInput"
       class="dynamic-input__input"
       name="item"
-      [(ngModel)]="value"
-      (input)="onChange.emit($event.target.value)"
+      [ngModel]="value"
+      (input)="onInput($event)"
       (focus)="openDropdown()"
       (keydown)="preventEventInput($event)"
       (keyup)="preventEventInput($event)"
