--- a/src/app/shared/components/dynamic-input/dynamic-input.component.html
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.html
@@ -4,7 +4,7 @@
       #input
       id="DIInput"
       class="wrap-input__input dynamic-input"
-      [(ngModel)]="value"
+      [ngModel]="value"
       name="item"
       (input)="onChangeFn($event)"
       (focus)="openDropdown()"
