--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,9 +20,10 @@
     </button>
     </span>
   </a> -->
-  <article class="banner-wr">
+<!--   <article class="banner-wr">
     <style>
       .banner-wr {
+
         width: 100%;
         font-size: 20px;
         background-color: #262151;
@@ -34,7 +35,11 @@
         overflow: hidden;
 
       }
-
+      @media(max-width: 1199px){
+        .banner-wr {
+          display: none;
+        }
+      }
       .banner-wr p {
         margin: 0;
       }
@@ -195,7 +200,7 @@
         </div>
       </div>
     </div>
-  </article>
+  </article> -->
 
   <app-header></app-header>
 
