--- a/src/app/popups/recovery-pass/recovery-pass.component.html
+++ b/src/app/popups/recovery-pass/recovery-pass.component.html
@@ -78,7 +78,8 @@
           <span>{{"If you haven't received the email, do the following:" | translate}}</span>
           <br>
           <span>{{'Check spam or other folders.' | translate}}<br>{{'Set email address whitelist.' | translate}}</span>
-          {{'How to set?' | translate}}<span><br>{{'Check the mail client works normally.' | translate}}</span></a>
+          <!-- {{'How to set?' | translate}} -->
+          <span><br>{{'Check the mail client works normally.' | translate}}</span></a>
       </div>
     </ng-template>
 
