--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -365,3 +365,15 @@
     }
   }
 }
+
+
+.transaction{
+  .table__row{
+    &:hover{
+      background-color: transparent;
+      &:nth-of-type(odd) {
+        background-color: #191f42;
+      }
+    }
+  }
+}
