--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -116,9 +116,9 @@
         {{'Check spam or other folders.' | translate}}
         <br>
         {{'Set email address whitelist.' | translate}}
-        <a class="popup__link" href="">
+        <!-- <a class="popup__link" href="">
           {{'How to set?' | translate}}
-        </a>
+        </a> -->
         <br>
         {{'Check the mail client works normally.' | translate}}
       </div>
