fixed markets, DEVEX-1665

--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -189,7 +189,7 @@
     <!-- app-order-book-mobile end -->
 
     <!-- app-trading-mobile start -->
-    <app-trading-mobile *ngIf="isAuthenticated"></app-trading-mobile>
+    <app-trading-mobile></app-trading-mobile>
     <!-- app-trading-mobile end -->
 
     <!--&lt;!&ndash; app-embedded-orders-mobile start &ndash;&gt;-->
