--- a/src/app/dashboard/components/market-search/market-search.component.html
+++ b/src/app/dashboard/components/market-search/market-search.component.html
@@ -1,4 +1,4 @@
-<div class="market-search">
+<div class="market-search" #container>
   <div class="market-search__top">
     <div class="market-search__title">{{'Select currency' | translate}}</div>
     <div class="market-search__close-mob" (click)="onCloseModal()">
@@ -20,31 +20,29 @@
     </div>
   </div>
   <div class="market-search__content">
-    <perfect-scrollbar style="width: 100%;">
+    <cdk-virtual-scroll-viewport [style.height.px]="scrollHeight" [itemSize]="30" *ngIf="scrollHeight">
       <table class="table widget__table widget__table--mob">
         <tbody>
-
-
-        <ng-container *ngFor="let pair of showPairs">
+        <ng-container *cdkVirtualFor="let pair of showPairs">
           <tr class="table__row table__row--mob " (click)="setCurrentPair(pair)">
-            <td class="table__cell">
-          <span
-            class="table__row-star"
-            [ngClass]="{'table__row-star--select': isFavorite(pair)}"
-          >
-          <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
-          </svg>
-          </span>
+            <td class="table__cell" *ngIf="isAuthenticated">
+              <span
+                class="table__row-star"
+                [ngClass]="{'table__row-star--select': isFavorite(pair)}"
+              >
+                <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
+                </svg>
+              </span>
             </td>
             <td class="table__cell" *ngIf="false">
-          <span class="table__row-star">
-          <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
-          </svg>
-          </span>
+              <span class="table__row-star">
+                <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
+                </svg>
+              </span>
             </td>
             <td class="table__cell table__cell--tal">
               <span>{{splitPairName(pair.currencyPairName)[0]}}</span>
@@ -52,15 +50,13 @@
             </td>
             <td class="table__cell table__cell--tar">
               <span>{{pair.lastOrderRate | roundCurrency: currency | formatCurrency }}</span>
-              <span class="txt-small txt-light-grey">/<span>$ {{+pair.priceInUsd | roundCurrency: true | formatCurrency}}</span></span>
+              <span class="txt-small txt-light-grey">/<span>$ {{+pair.priceInUsd | roundCurrency: true | formatCurrency: true}}</span></span>
             </td>
           </tr>
           <tr style="height: 10px;"></tr>
         </ng-container>
-
-
         </tbody>
       </table>
-    </perfect-scrollbar>
+    </cdk-virtual-scroll-viewport>
   </div>
 </div>
