--- a/src/app/dashboard/components/market-search/market-search.component.scss
+++ b/src/app/dashboard/components/market-search/market-search.component.scss
@@ -14,13 +14,15 @@
 }
 @media(max-width: 1200px){
   .market-search__top{
-      margin-top: 49px;
-    }
+    margin-top: 49px;
+  }
 }
 
 
 .market-search{
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 perfect-scrollbar{
