--- a/src/app/dashboard/components/markets/markets-item/markets-item.component.html
+++ b/src/app/dashboard/components/markets/markets-item/markets-item.component.html
@@ -13,6 +13,7 @@
       [attr.data-favorite]="pair.currencyPairId"
     >
       <span
+        *ngIf="isAuthenticated"
         class="table__row-star"
         [ngClass]="{'table__row-star--select': isFavorite}"
       >
