--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -74,7 +74,7 @@
           <input type="checkbox" name="togglerZero" [(ngModel)]="hideAllZero" (change)="onToggleAllZeroTrigger()">
           <span class="toggler__indicate"></span>
         </label>
-        <span>{{'Show zero' | translate}}</span>
+        <span>{{'Hide zero' | translate}}</span>
       </div>
     </form>
     <!--filters end-->
