--- a/src/app/shared/components/price-input/price-input.component.html
+++ b/src/app/shared/components/price-input/price-input.component.html
@@ -7,6 +7,7 @@
        name="price"
        required
        #inputEl
+       autocomplete="off"
        (input)="onInput($event)"
        (blur)="onBlur($event)"
        (focus)="onFocus()"
