--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -412,7 +412,7 @@
       padding-top: 16px;
       transition:.3s;
       &:hover{
-        color: #94C2FF;
+        color: #237BEF;
       }
     }
     .menu__link-text{
@@ -1079,9 +1079,9 @@
   .submenu__item{
     transition:.3s;
     &:hover{
-      background-color: rgba(242,246,250,.7);
+      background-color: rgba(53,124,225,.1);
       .menu__link-text{
-        color: #94C2FF;
+        color: #237BEF;
       }
     }
     .menu__link-text{
