--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -168,7 +168,7 @@
           <!--</div>-->
           <!--<span>{{'Qubera Balance' | translate}}</span>-->
           <!--</button>-->
-          <button
+         <!--  <button
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
             (click)="onSelectTab(Tab.QUBERA)"
@@ -188,7 +188,7 @@
               </svg>
             </div>
             <span>{{'Qubera Balance' | translate}}</span>
-          </button>
+          </button> -->
           <button
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
