--- a/src/app/funds/balance/pending-request-table/pending-request-table.component.html
+++ b/src/app/funds/balance/pending-request-table/pending-request-table.component.html
@@ -28,7 +28,7 @@
       </div>
     </td>
     <td class="table__cell">
-      <img [src]="item.currency | getIconUrl" class="select__list-item-icon">
+      <img [src]="item.currency | getIconUrl:true" class="select__list-item-icon">
       <span>{{item.currency}}</span>
     </td>
     <td class="table__cell table__cell--tar">
