--- a/src/assets/scss/components/_dropdown.scss
+++ b/src/assets/scss/components/_dropdown.scss
@@ -56,8 +56,8 @@
 
     &:hover, &.active  {
       cursor: pointer;
-      background-color: $light-aqua;
-      color: #94C2FF;
+      color: #237BEF;
+ background-color: rgba(53,124,225,.1);
     }
   }
   /*--- elements end ---*/
@@ -75,8 +75,8 @@
       font-weight: 400;
       &:hover, &.active {
         cursor: pointer;
-        color: #94C2FF;
-        background-color: rgba(255,255,255,.1);
+        color: #237BEF;
+ background-color: rgba(53,124,225,.1);
       }
     }
   }
@@ -233,11 +233,11 @@ app-dynamic-input-dashboard  perfect-scrollbar > .ps.ps--active-y > .ps__rail-y{
 }
 
 .dark-theme .currency-pair-info  .dropdown__item:not(.active):hover{
-  color: #191A39;
-  background: none;
+  color: #237BEF;
+ background-color: rgba(53,124,225,.1);
 }
 .select__list-item:not(.active):hover{
-  color: #191A39;
-  background: none;
+  color: #237BEF;
+ background-color: rgba(53,124,225,.1);
 }
 
