--- a/src/assets/scss/pages/_balance.scss
+++ b/src/assets/scss/pages/_balance.scss
@@ -56,7 +56,7 @@
     margin-right: 6px;
     img {
       height: 100%;
-      width: 100%;
+      max-width: 100%;
     }
   }
   &__currency-name {
