--- a/src/app/funds/balance-details/balance-details.component.html
+++ b/src/app/funds/balance-details/balance-details.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
   <!--balance-mob start-->
-  <div class="balance balance--mob">
+  <div class="balance balance--mob balance-detail">
     <!--open mob-balance start-->
     <div class="open-mob-balance">
       <div class="open-mob-balance__header" (click)="onGoBackToMain()">
@@ -48,7 +48,7 @@
                   <!-- <span class="txt-small txt-red">–0.24%</span> -->
                 </td>
               </tr>
-              <tr class="table__row--mob">
+              <tr class="table__row--mob balance-button-row">
                 <td class="table__cell table__cell--tal">
                   <button class="btn btn--center btn--small" (click)="goToCryptoDepositPopup(selectedItem)">{{'Deposit' | translate}}</button>
                 </td>
