--- a/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-three/google-step-three.component.html
@@ -35,7 +35,7 @@
     class="wrap-input__input"
     type="text"
     formControlName="pincode">
-    <label class="wrap-input__label">{{'Pin code' | translate}}</label>
+    <label class="wrap-input__label">{{'Pin code from email' | translate}}</label>
     <div class="wrap-input__line"></div>
     <div>
       <div class="input-hint-wrapper">
