--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -69,14 +69,14 @@
 
         <div class="wrap-input__message--show">
           <span *ngIf="!form.valid">
-          {{'Minimum sum for deposit' | translate}} {{minRefillSum || 0 | exponentToNumber}} {{activeFiat ? activeFiat.name : ''}}
+          {{'Minimum sum for deposit' | translate}} {{+(minRefillSum || 0) | roundCurrency: 'USD' | formatCurrency: 'short': 'USD'}} {{activeFiat ? activeFiat.name : ''}}
         </span>
         </div>
 
         <!--Input error section starts-->
         <div class="input-hint-wrapper" *ngIf="!form.valid && isSubmited">
           <span class="wrap-input__message">
-            Should be at least {{minRefillSum || 0 | exponentToNumber}}
+            Should be at least {{+(minRefillSum || 0) | roundCurrency: 'USD' | formatCurrency: 'short': 'USD'}}
           </span>
         </div>
         <!--Input error section ends-->
