--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -103,14 +103,15 @@
       <div
         class="wrap-input wrap-input--fix230"
         [ngClass]="{
-          'wrap-input--error': (!secondPassword.valid &&
-                                secondPassword.touched &&
+          'wrap-input--error': ((!secondPassword.valid &&
                                 secondPassword.errors != null &&
-                                secondPassword.errors['passwordsNotMatch']) && firstPassword.valid}"
+                                secondPassword.errors['passwordsNotMatch']) && firstPassword.valid)}"
       >
         <input
           class="wrap-input__input"
           [type]="isPassword2Visible ? 'text' : 'password'"
+          (blur)="showConfirmTooltip(false)"
+          (input)="showConfirmTooltip(true)"
           formControlName="password_2"
           autocomplete="false"
           required
@@ -123,19 +124,23 @@
           [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
         ></span> -->
         <!--Input error section starts-->
-        <ng-container *ngIf="secondPassword.touched && secondPassword.errors != null">
+        <ng-container *ngIf=" secondPassword.errors != null">
           <!-- <span
             class="wrap-input__message"
             *ngIf="secondPassword.errors['required']"
           >
             {{'Password field is required.' | translate}}
           </span> -->
-          <div class="input-hint-wrapper" *ngIf="(currentPassword.valid && firstPassword.valid)">
+          <div class="input-hint-wrapper" *ngIf="(currentPassword.valid && firstPassword.valid && isSubmitted)">
             <span
             class="wrap-input__message"
-            *ngIf="secondPassword.errors['passwordsNotMatch'] "
-          >
+            *ngIf="secondPassword.errors['passwordsNotMatch'] && !secondPassword.errors['required'] && isSubmitted">
             {{'Passwords you provided do not match' | translate}}
+          </span>
+            <span
+              class="wrap-input__message"
+              *ngIf="secondPassword.errors['required']">
+            {{'Confirm password field is required.' | translate}}
           </span>
           </div>
 
