--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -61,4 +61,5 @@
 @import "pages/settings/nickname/settings-nickname";
 @import "pages/settings/kyc/settings-kyc";
 @import "pages/footer-pages";
+@import "pages/dashboard/_orders";
 
