--- a/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.scss
+++ b/src/app/dashboard/components/order-book-mobile/order-book-mobile.component.scss
@@ -11,7 +11,7 @@
   .tr{
     display: flex;
     position: relative;
-
+        line-height: 1.2;
     &:first-child{
       // margin-bottom: 10px;
       .td{
