--- a/src/app/funds/balance-details/balance-details.component.html
+++ b/src/app/funds/balance-details/balance-details.component.html
@@ -31,7 +31,7 @@
                 <td class="table__cell table__cell--tal">
                   <div class="balance__currency">
                     <div class="balance__currency-icon">
-                      <img [src]="selectedItem.currencyName | getIconUrl">
+                      <img [src]="selectedItem.currencyName | getIconUrl:true">
                     </div>
                     <div>
                       <span>{{selectedItem.currencyName}}</span>
